src/index.css
/* use root to hold variables */
:root{ 
  --cardBGHoverColor: rgb(214, 252, 255);
  --cardBGColor: #8de4af;

  --otmCardColor: rgb(206, 84, 84);
  --otmHoverColor: rgb(255, 251, 240);

  /* --cardBGColor: rgb(51, 115, 199); */
  --cardBGColorLighter: rgb(114, 154, 206);
  --hoverColor: 200,50,50,0.5;
  --bodyBGColor: #fffbf7;
  /* --bodyBGColor: rgb(206, 190, 177); */
  --buttonColor: rgb(65, 119, 141); 
  --buttonTextColor: #edf5e0;
  --buttonHoverColor: rgb(255, 255, 255);
  --buttonHoverTextColor: #575a54;
  --textColor: #332a2a;
  
  --borderColor: #05396b;
  --border-radius: 20px;
  --border: 5px solid var(--borderColor);
  --displayHeight: 88vh; 
  --borderRadius: 10px; 

  --scrollbarWidth: 10px; 
}

body {
  /* font-family: 'Kameron', serif; */
  font-family: 'Baloo Bhaina 2', cursive;
  /* font-weight: 300; */

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--bodyBGColor);
  color: var(--textColor);
  line-height: 1.5em;
  margin:0px;
  margin-left: 5px; 
  margin-right: 5px;
}

::-webkit-scrollbar {
  height: 12px;
  width: var(--scrollbarWidth);
}
::-webkit-scrollbar-thumb {
  background-color: var(--cardBGColor);
  -webkit-border-radius: var(--borderRadius);
}

#mainContainer {
  height: 90%;
  margin-top:70px;
  padding:0px;
  margin-left: 5px;
  overflow-y: scroll;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.title{ 
  font-family: Yellowtail; 
  font-size: 2.5rem;
  display: inline;
}

/* .NavBarParent--mobile {
  top:none; 
  bottom:0px; 
} */

.NavBarParent {
  /* display: inline-grid;  */
  background-color: var(--bodyBGColor);
  position: fixed;
  top: 0px;
  width: 100%;
}

.NavBarButton {
  font-family: Yellowtail;
  font-weight: normal;
  font-size: 1.1rem;
  padding: 10px;
  margin:10px;
  border: none; 
  /* background-color: var(--bodyBGColor); */
  background-color: transparent;
  color: var(--textColor);
  /* border-radius: 110% 10% 110% 5%; */
}
.NavBarButton:hover{
  background-color: var(--cardBGColor);
  /* border-radius: 110% 10% 110% 5%; */
  border:none;
}

button:focus{
  /* remove highlight when button is clicked */
  outline:0;
}

.NavBar button.highlight{
  background-color: var(--cardBGColor);
}

.AttractionList {
  width:40%;
  /* height: 100vh;  */
  height: var(--displayHeight);
  float: left;
  overflow-y: scroll; 
  overflow-x: hidden;
  margin-right: 10px;
  margin-left: 10px;
  border: var(--border);
  border-radius: var(--borderRadius);
}


.newAttractionForm { 
  /* width:40%;   */
  /* float: left; */
  margin: 10px;  
}

.map {
  height: var(--displayHeight); 
  /* height: 90%; */
  border: 5px solid var(--borderColor);
  border-radius: var(--borderRadius);
  /* margin: 10px; */
  /* setting z index to less than 0 so the AttractionCardLarge can appear over it */
  z-index: 0;
}

/* popup */
.leaflet-popup-content-wrapper {
  background-color: var(--cardBGColor);
  border: 2px solid var(--borderColor)
}
.leaflet-popup-content {
  /* font-size: 2em; */
  font-size: 1em;
}

.popupName { 
  font-size:2em;
  font-family: Yellowtail;
}

.popupText{
  font-size:1.5em;  
}

.AttractionListCard {
  border: 2px solid var(--borderColor); 
  background-color: var(--cardBGColor);
  border-radius: var(--borderRadius);
  /* max-width: 95%; */
  margin: 5px;
  /* left margin to make up for scrollbar width  */
  margin-left: calc(5px + var(--scrollbarWidth));
  margin-top: 10px; 
  margin-bottom:10px;
  padding: 7px;
  transition: all 0.1s;
}

.AttractionListCard.hovered {
  background-color: var(--cardBGHoverColor);
}

.AttractionListCard:hover{
  background-color: var(--cardBGHoverColor);
  transform: scaleY(1.05);
  border: 3px solid var(--borderColor)
  /* color: var(--buttonTextColor) */
}

.MyAttractionListCard { 
  width: 40%;
}


.name {
  text-transform: capitalize;
  margin:0px;
  display: inline;
  font-size: 1.4em;
  /* font-family: Yellowtail; */
}

.address {
  font-size: 0.8rem;
  font-style: italic;
  float:right;
  /* margin-top: 0px; */
}

/* about page  */
.informationBox { 
  border: 5px solid var(--borderColor);
  padding: 10px;
  border-radius: 10px;
  background-color: var(--cardBGColor);
  /* max-width: 50%; */
}

.MyAccountComponent {
  width: 40%;
}

.middlePageBox { 
  max-width: 40%;
  /* margin: auto;  */
  margin: 10px auto 10px auto;
}


.About a{
  font-weight: bold;
  color: black; 
  text-decoration:underline;
}


button {
  font-family: Yellowtail; 
  font-weight: bold;
  font-size: 1em;
  padding:10px;
  background-color: var(--buttonColor);
  color: var(--buttonTextColor);
  margin:5px;
  text-transform: uppercase;
  border: 2px solid black;
  border-radius: var(--borderRadius);
  transition: all 0.1s;
} 

button:hover {
  background-color: var(--buttonHoverColor);
  color: var(--buttonHoverTextColor);
  /* border: 1px solid var(--buttonHoverColor); */
}


input, textarea{
  /* box-shadow: inset 0em 0.5em 5em rgb(var(--cardBGColorLighter)); */
  background-color: var(--cardBGColor);
  border: none;
  border-bottom: 3px solid transparent;
  font-size: 1rem;
  width: 90%;
  transition: all 0.2s;
  margin:10px;
}

input:hover, input:focus, textarea:hover, textarea:focus{
  border-bottom: 3px solid var(--textColor);
  outline:0;
  /* background-color: var(--cardBGColorLighter ); */
}

label {
  font-family: Yellowtail; 
  font-size: 1.5em;

}
.MyAccount label{
  font-weight: bold;
  transform: rotate(-90deg);
}

.MyAccount input {
  padding: 5px;
  margin: 5px;
}

.editAttractionForm:hover {
  background-color: var(--cardBGColor); 
  /* margin: 10px;
  width: 40%; */
}

/* popup style taken from https://dev.to/skptricks/create-simple-popup-example-in-react-application-5g7f */
.AttractionCardLarge {
  top: 0;  
  left: 0;  
  right: 0;  
  bottom: 0;  
  margin: auto; 
  position: fixed;   
  width: 100%;  
  height: 100%;  
  background-color: rgba(0,0,0, 0.5);
  z-index: 1;
}



.AttractionCardLargeInner {
  /* actual popup div */
  position: absolute;  
  width:100%;
  left: 0%;  
  right: 00%;  
  top: 5%;  
  bottom: 5%;  
  margin: auto;  
  /* z-index: 1000; */
}

.AttractionListCardLarge { 
  /* width: 100%; */
  max-width: 100%;
  margin: 5px;
  /* margin to make up for scroll bar */
  margin-left: calc(5px + var(--scrollbarWidth));
  /* animation: slide-up .5s; */

}

.AttractionListCardLargeInner { 
  background-color: var(--cardBGHoverColor);
  border: 3px solid var(--borderColor);
  border-radius: var(--border-radius);
  padding: 5px;
  padding-left: 10px;
  padding-right: 10px;
}

.ReviewList{
  overflow-y: scroll;
  max-height:50vh;
  /* max-height:55%; */
  max-width: 100%;
  margin: auto;
  border-radius: var(--borderRadius);
  background-color: var(--bodyBGColor);
}

.ReviewCard { 
  width:90%;
  margin: auto;
  padding: 0px;
  border-bottom: 2px solid var(--borderColor); 
}

.reviewDate { 
  float:right;
}

.writeReviewText {
  background-color: var(--bodyBGColor);
  border-radius: var(--borderRadius);
  /* max-width: 90%; */
  margin: auto auto;
  border: var(--border)
}

.writeReviewText:hover {
  border: 5px solid var(--borderColor)
}

.ratingSelect {
  float: right;
  margin: auto auto;
}

.ratingSelectOption { 
  background-color: blue;
}

#rating {
  margin: 5px;
  background-color: var(--cardBGColor);
}

#rating:focus {
  outline: none;
  /* background-color: orange; */
}

.WriteReviewCard {
  padding-top: 10px;
}

.MyAttractionList {
  overflow-y: scroll;
  height: var(--displayHeight); 
  border: var(--border); 
  border-radius: var(--borderRadius);
  margin: 10px;
  margin-bottom: 0px;
}

.newAttractionFormMap {
  max-height: 75vh;
  margin: 0px;
}


@keyframes slide-up {
  0% {
      opacity: 0.5;
      height: 0%; 
      background-color: black;
      /* transform: translateY(20px); */
  }
  100% {
      opacity: 1;
      height: 100%;
      /* transform: translateY(0); */
  }
}

.locationButton{
  transform: scale(0.7)
}

.serverResponseList { 
  border: var(--border); 
  border-radius: var(--borderRadius);
}
.error{
  background-color: rgb(187, 45, 45);
  color: var(--buttonTextColor)
}

.otmImage {
  width: 100%;
  margin:auto;
  /* border: 3px solid black;
  border-radius: var(--borderRadius); */  
}

#otmAttractionList .otmAttractionCard {
  background-color: var(--otmHoverColor);
  border: var(--border); 
  border-radius: var(--borderRadius);

  /* don't put padding on sides so that the listing image can reach the sides and look like a card  */
  /* padding-top: 10px;  */
  padding-bottom: 10px; 
  margin-left: var(--scrollbarWidth);
}

#otmAttractionList .AttractionListCard {
  background-color: var(--otmCardColor);
}

#otmAttractionList .AttractionListCard:hover {
  background-color: var(--otmHoverColor);
}

.otmAttractionCard {
  background-color: blue;
  margin-top: 0px;
}


.otmAttractionCard .address, p, .name{
  padding-left: 10px;
  padding-right: 10px;
}

.otmAttractionCardDetails {
  background-color: var(--otmCardColor);
  border-radius: 5px 5px 0px 0px;
  padding: 10px 5px;
  display:flex;
  flex-wrap: wrap;
  justify-content: space-between;
  /* width: auto; */
}

.listHeader {
  background-color: var(--cardBGColor);
  font-family: Yellowtail;
  font-size: 2em;
  padding: 10px; 
  /* width: 100%; */
  margin: 10px;
  display:flex; 
  justify-content: center;
  border: var(--border);
  border-radius: var(--border-radius);
  transition: all 0.1s;
}

.listHeader:hover{
  background-color: transparent;
  padding: 15px;
}

#otmAttractionsHeader{
  background-color: var(--otmCardColor);
  color: var(--otmHoverColor)
}

#otmAttractionsHeader:hover{
  background-color: var(--otmHoverColor);
  color: var(--otmCardColor);
}

@media (max-width: 870px){
  .NavBarParent { 
    top:auto; 
    bottom:0px;
    max-height: 8%;
  }
  .NavBarButton{
    font-size: 0.8rem;
  }

  #mainContainer{
    margin-top: 10px;
  }
}

